--- a/requirements.txt
+++ b/requirements.txt
@@ -35,10 +35,10 @@ matplotlib==3.6.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
 numpy==1.24.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
+# nvidia-cublas-cu11==11.10.3.66
+# nvidia-cuda-nvrtc-cu11==11.7.99
+# nvidia-cuda-runtime-cu11==11.7.99
+# nvidia-cudnn-cu11==8.5.0.96
 orjson==3.8.6
 packaging==23.0
 pandas==1.5.3
@@ -66,7 +66,7 @@ rfc3986==1.5.0
 scikit-learn==1.2.1
 scipy==1.10.0
 six==1.16.0
-sklearn==0.0.post1
+# sklearn==0.0.post1
 sniffio==1.3.0
 stack-data==0.6.2
 starlette==0.24.0
